--- a/general.css
+++ b/general.css
@@ -61,6 +61,15 @@ table {
   --generalPadding: 20px;
 }
 
+#main {
+  min-width: 100%;
+  min-height: 100vh;
+  max-width: 1920px;
+  padding: 0 min(3vw, 20px);
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
+}
+
 .btnHover:hover {
   filter: brightness(1.1);
 }
