add btn return website

--- a/general.css
+++ b/general.css
@@ -74,6 +74,28 @@ table {
   filter: brightness(1.1);
 }
 
+.returnHome {
+  display: block;
+  width: fit-content;
+  padding: 0.7em 1em;
+  font-size: 14px;
+  line-height: 1;
+  font-weight: bold;
+  white-space: nowrap;
+  background-color: var(--btn-color);
+  margin-top: 20px;
+  overflow: hidden;
+  color: var(--main-text-color);
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+.returnHome i {
+  font-size: 16px;
+  line-height: 1;
+}
+
 footer {
   width: 100%;
   display: flex;
